ex-8: fix solution config

--- a/exercises/solutions/ex-8/robot_container/ROUTER_CONFIG.json5
+++ b/exercises/solutions/ex-8/robot_container/ROUTER_CONFIG.json5
@@ -40,7 +40,8 @@
     ///
     /// See https://docs.rs/zenoh/latest/zenoh/config/struct.EndPoint.html
     endpoints: [
-      // "<proto>/<address>"
+      // roscon2025_workshop ex-8: configure connection to roscon.zenoh.io (Note: this server was online only during the workshop)
+      "tcp/roscon.zenoh.io:7447"
     ],
 
     /// Global connect configuration,
@@ -89,8 +90,8 @@
     ///
     /// See https://docs.rs/zenoh/latest/zenoh/config/struct.EndPoint.html
     endpoints: [
-      // roscon2025_workshop ex-8: configure connection to roscon.zenoh.io (Note: this server was online only during the workshop)
-      "tcp/roscon.zenoh.io:7447"
+      // roscon2025_workshop ex-8: only listen on loopback on plain TCP for internal Nodes to connect
+      "tcp/localhost:7447",
     ],
 
     /// Global listen configuration,
